--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "techboard",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.9.0"
+  },
+  
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
