--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "engines": {
     "node": "16.9.0"
   },
-  
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
-  
+    "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.1",
